fix showoff alignment

--- a/css/style.css
+++ b/css/style.css
@@ -72,13 +72,14 @@ ul{
 
 .showoff{
     background-color: #00008B;
+    justify-content: center;
+    align-items: center;
 }
 
 .big-pic{
     background-color: #EE82EE;
     width: 40%;
     height: 80%;
-    margin: auto;
 }
 
 .bg-blu{
